fixed a bug where text is wrapping, another reminder is firing even if turned off and disabled the creation of multiple instances

--- a/src/mainWindow/assets/css/mainWindow.css
+++ b/src/mainWindow/assets/css/mainWindow.css
@@ -41,7 +41,7 @@ body {
 	text-align: center;
 	padding: 10px;
 	border-radius: 10px 10px 0 0;
-	width: 200px;
+	width: 250px;
 }
 .sub-header,
 .table {
